# Chess-game

./: CMakeLists.txt  TODO
include/Text_editor/: TextEditor.h
lib/: catch2_main.cpp
src/: TextEditor.cpp  main.cpp
src/tests/: main.test.cpp
